# pyhypergraph

./: README.md  pyproject.toml
pyhypergraph/: __init__.py  hypergraph voting games.py  hypergraph.py
tests/: test_hypergraph.py
